tests/ui/discord-frontend/entity_macro/expected_square_brackets_11.stderr
error: expected square brackets
  --> tests/ui/discord-frontend/entity_macro/expected_square_brackets_11.rs:39:17
   |
LL |     overrides = core
   |                 ^^^^

error: aborting due to 1 previous error

